<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddOptionActivity">
    //setting defined toolbar as main toolbar
    <include android:id="@+id/toolbar"
        layout="@layout/mytoolbar"></include>

    <TextView
        android:id="@+id/tv_title3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/titel_background"
        android:fontFamily="serif"
        android:text="@string/title3"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_next_opt"
        android:layout_width="220dp"
        android:layout_height="47dp"
        android:background="@color/next_Button"
        android:fontFamily="serif"
        android:text="@string/Btn_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_sateRadio"
        app:layout_constraintVertical_bias="0.693" />

    <TextView
        android:id="@+id/tv_opt_rev"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:fontFamily="serif"
        android:text="@string/insurance"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title3" />

    <CheckBox
        android:id="@+id/cb_gps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="serif"
        android:text="@string/Equip_1"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/cb_sateRadio"
        app:layout_constraintTop_toBottomOf="@+id/tv_title3" />

    <CheckBox
        android:id="@+id/cb_sateRadio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/Equip_2"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/cb_infantSeat"
        app:layout_constraintTop_toBottomOf="@+id/cb_gps" />

    <CheckBox
        android:id="@+id/cb_infantSeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/Equip_3"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_sateRadio" />

    <RadioGroup
        android:id="@+id/rdg_Insurance"
        android:layout_width="205dp"
        android:layout_height="152dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_next_opt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_opt_rev"
        app:layout_constraintVertical_bias="0.345">

        <TextView
            android:id="@+id/tv_insDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/ins_Description1"
            android:textAlignment="textStart"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/rb_Insurance100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/insurance_type1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/ins_Description2"
            android:textAlignment="textStart"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/rb_Insurance50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/insurance_type2"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/ins_Description3"
            android:textAlignment="textStart"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/insurance_type3"
            android:textSize="18sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/tv_rentalDays_opt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/total_rental_days"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_rentalCar_opt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/selectItem"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <fragment
        android:id="@+id/fg_option"
        android:name="com.example.semesterprojectver2.MainFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_next_opt" />

</androidx.constraintlayout.widget.ConstraintLayout>