<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">
    //setting defined toolbar as main toolbar
    <include
        android:id="@+id/toolbar4"
        layout="@layout/mytoolbar"></include>

    <TextView
        android:id="@+id/tv_title5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:background="@color/titel_background"
        android:fontFamily="serif"
        android:text="@string/title5"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_Name"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/prompt_name"
        android:inputType="textPersonName"
        android:textColor="@color/userInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/et_PhoneNum"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/prompt_phoneNum"
        android:inputType="phone"
        android:textColor="@color/userInput"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/et_Name" />

    <EditText
        android:id="@+id/et_Email"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/prompt_Email"
        android:inputType="textEmailAddress"
        android:textColor="@color/userInput"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/et_PhoneNum" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="serif"
        android:text="@string/name"
        android:textColor="@color/userInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Email"
        android:textColor="@color/userInput"
        app:layout_constraintStart_toStartOf="@+id/et_PhoneNum"
        app:layout_constraintTop_toBottomOf="@+id/et_PhoneNum" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/phoneNum"
        android:textColor="@color/userInput"
        app:layout_constraintStart_toStartOf="@+id/et_Name"
        app:layout_constraintTop_toBottomOf="@+id/et_Name" />

    <Button
        android:id="@+id/btn_rent"
        android:layout_width="157dp"
        android:layout_height="41dp"
        android:layout_marginBottom="96dp"
        android:background="@color/next_Button"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/btn_Rent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_emailDesc"
        app:layout_constraintVertical_bias="0.128" />

    <TextView
        android:id="@+id/tv_totalprice_rev"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="serif"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_title5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <fragment
        android:id="@+id/fg_Rev2"
        android:name="com.example.semesterprojectver2.MainFragment"
        android:layout_width="0dp"
        android:layout_height="88dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_rent"
        app:layout_constraintVertical_bias="0.992"
        tools:layout="@layout/fragment_main" />

    <TextView
        android:id="@+id/tv_emailDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Email" />

</androidx.constraintlayout.widget.ConstraintLayout>