<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    //setting defined toolbar as main toolbar
    <include android:id="@+id/toolbar"
        layout="@layout/mytoolbar"></include>

    <EditText
        android:id="@+id/et_edate"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:ems="10"
        android:focusable="false"
        android:fontFamily="serif"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="@+id/tv_rDate"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/et_sdate"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:focusable="false"
        android:fontFamily="serif"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="@+id/tv_sDate"
        app:layout_constraintStart_toStartOf="@+id/et_edate" />

    <TextView
        android:id="@+id/tv_sDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:fontFamily="serif"
        android:text="@string/start_date"
        android:textColor="@color/userInput"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/et_sdate"
        app:layout_constraintHorizontal_bias="0.866"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_rDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="77dp"
        android:layout_marginBottom="112dp"
        android:fontFamily="serif"
        android:text="@string/end_date"
        android:textColor="@color/userInput"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_next"
        app:layout_constraintEnd_toStartOf="@+id/et_edate"
        app:layout_constraintHorizontal_bias="0.862"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sDate"
        app:layout_constraintVertical_bias="0.505" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="229dp"
        android:layout_height="41dp"
        android:layout_marginBottom="124dp"
        android:background="@color/next_Button"
        android:fontFamily="serif"
        android:text="@string/Btn_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_days_rev"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="serif"
        android:text="@string/total_rental_days"
        android:textAlignment="center"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btn_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_title4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@color/titel_background"
        android:fontFamily="serif"
        android:text="@string/title2"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>